<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkGray">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkGray"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/darkGray"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:title="Register"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <ImageButton
                    android:id="@+id/imageButtonInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:padding="20dp"
                    app:srcCompat="@drawable/information" />
            </Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingPrefix">

            <ScrollView
                android:id="@+id/quiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewPrizesInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/instructions"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/button"
                        android:layout_marginTop="25dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextFullName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin"
                                android:hint="@string/full_name"
                                android:inputType="textPersonName"
                                android:padding="@dimen/half_margin"
                                android:text=""
                                android:textColor="@color/white" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextJobTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin"
                                android:hint="@string/job_title"
                                android:inputType="text"
                                android:padding="@dimen/half_margin"
                                android:text=""
                                android:textColor="@color/white" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextLevel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin"
                                android:hint="@string/level"
                                android:inputType="text"
                                android:padding="@dimen/half_margin"
                                android:text=""
                                android:textColor="@color/white" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:padding="@dimen/half_margin"
                                android:textColor="@color/white" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/editTextPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin"
                                android:hint="@string/phone"
                                android:inputType="phone"
                                android:padding="@dimen/half_margin"
                                android:textColor="@color/white" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <Button
                        android:id="@+id/buttonRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="60dp"
                        android:paddingStart="@dimen/horizontal_padding"
                        android:paddingEnd="@dimen/horizontal_padding"
                        android:background="@drawable/round_shape_button_primary"
                        android:text="@string/register"
                        android:textColor="@color/white" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>